@@ -16,7 +16,9 @@ module Devise
       # the record in the database. If the attempt fails, we pass to another
       # strategy handle the authentication.
       def authenticate!
-        if resource = mapping.to.serialize_from_cookie(*remember_cookie)
+        resource = mapping.to.serialize_from_cookie(*remember_cookie)
+
+        if validate(resource)
           success!(resource)
         else
           cookies.delete(remember_key)
